--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,32 +1,46 @@
 
 .header {
+  height: 100px;
     overflow: hidden;
     background-color: #499380;
-    padding: 20px 10px;
+    padding: 3px 3px ; 
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-image: url(/asset/Header.png);
+    background-size: cover;
+
+    }
+.main-logo{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: white;
+    font-weight: bold;
+    font-family: Roboto Slab;
+    font-style: normal;
+    font-size: 11px;
     }
   .header a {
     float: left;
     color: black;
     text-align: center;
-    padding: 12px;
+    padding: 17px;
     text-decoration: none;
     font-size: 18px;
     line-height: 25px;
     border-radius: 17px;
   }
   #logo {
-    width: 125px;
-    height: 125px;
+    width: 30px;
+    height: 30px;
     margin: 10px 10px 10px 10px;
   }
-
-
-  .header a.tencty {
-    font-size: 25px;
-    font-style: normal;
-    font-weight: bold;
-    font-family: Roboto Slab;
-    color: white; 
+  img{
+    max-width:200px;
+    max-height:100px;
+    width: auto;
+    height: auto;
   }
   .header a.introduce {
     color: white;
@@ -59,10 +73,11 @@
     .header a {
       float: none;
       display: block;
-      text-align: left;
+      text-align: left; 
     }
     .header-right {
       float: none;
     }
+    
   }
   
