--- a/src/features/product/component/banner/banner.scss
+++ b/src/features/product/component/banner/banner.scss
@@ -5,7 +5,8 @@
      left: 4px;
      bottom: 100px;
      background-image: url(/asset/banner.jpg);
+     background-size: cover;
+     background-repeat: no-repeat;
   
  }
- 
- 
+
