--- a/src/features/Home/body.scss
+++ b/src/features/Home/body.scss
@@ -8,4 +8,19 @@ h2.label2 {display: block; margin-left: auto; margin-right: auto;}
     line-height:10px;
     text-align:center;
     }
-    
+    * {
+        box-sizing:border-box
+      }
+      h2 {
+        text-align: center;
+      }
+      /* Slideshow container */
+      .slider{
+        width:400px;
+        margin:20px auto;
+        text-align: center;
+        padding:20px;
+        color:white;
+        .parent-slide{padding:15px;}
+        img{display: block;margin:auto;}
+      }
