--- a/src/features/product/component/dasboard/dasboard.scss
+++ b/src/features/product/component/dasboard/dasboard.scss
@@ -18,8 +18,7 @@ input[type=text] {
     font-size: 20px;
     background-color: white;
     background: url('/asset/search.png');
-    height: 30px;
-    background-position: 10px 10px; 
+    background-position: 7px 7px  ; 
     background-repeat: no-repeat;
     padding: 12px 20px 12px 40px;
   
@@ -32,10 +31,9 @@ input[type=text] {
   width: 70px;
   border-radius: 50px;
   border-color: black;
-  box-shadow: 5px 5px 20px #999696;
-  background: white;
-  background-image: url(/asset/kiosk.png);
-  background-size: 100%;
+  background: #FFFFFF;
+  box-shadow: 10px 10px 40px rgba(0, 0, 0, 0.25);
+  background-image: url(/asset/iconkiosk.png);
  }
  .btnmaythungan {
   height: 70px;
@@ -44,8 +42,7 @@ input[type=text] {
   border-color: black;
   box-shadow: 5px 5px 20px #999696;
   background: white;
-  background-image: url(/asset/maythungan.png);
-  background-size: 100%;
+  background-image: url(/asset/iconmaythungan.png);
  }
  .btnphanmem {
   height: 70px;
@@ -54,8 +51,8 @@ input[type=text] {
   border-color: black;
   box-shadow: 5px 5px 20px #999696;
   background: white;
-  background-image: url(/asset/phanmem.png);
-  background-size: 100%;
+  background-image: url(/asset/iconsoftware.png);
+
  }
  .btncategory {
    text-align: center;
@@ -63,7 +60,10 @@ input[type=text] {
   flex-direction: row;
   justify-content: center;
  }
-
+.iconn{
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
 .div-btn{
   justify-content: center;
   font-weight: bold;
@@ -72,4 +72,53 @@ input[type=text] {
   margin-right:1rem;
   display: flex;
   flex-direction: column;
+}
+.p-items {
+font-family: Arial;
+font-style: normal;
+font-weight: bold;
+text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.div-2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 63px 12px 59px 56px;
+  height: 100%;
+  width: 100%;
+  border: 1px solid;
+  background: #ffffff;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 46px;
+  color: #000000;
+}
+.div-3 {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: end;
+  margin: 0px 0px 0px 0px;
+}
+.img-1 {
+  height: 409px;
+  width: 406px;
+  margin: 0px 0px 0px 0px;
+}
+.span-1 {
+  margin: 0px 0px 0px 0px;
+}
+.span-2 {
+  font-weight: 400;
+  text-decoration: underline;
+  margin: 0px 0px 0px 0px;
+}
+.div-4 {
+  border-radius: 90px;
+  padding: 4px 35px 14px 72px;
+  margin: 34px 0px 0px 0px;
+  border: 5px solid #000000;
+  background: #4adcb0;
 }
