--- a/src/features/product/component/dasboard/dasboard.scss
+++ b/src/features/product/component/dasboard/dasboard.scss
@@ -79,46 +79,60 @@ font-style: normal;
 font-weight: bold;
 text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
+.product-card {
+width: 200px;
+height: 300px;
+left: 50px;
+top: 50px;
+background: #FFFFFF;
+box-shadow: 10px 10px 33px rgba(0, 0, 0, 0.43), 0px 4px 4px rgba(0, 0, 0, 0.25);
+border-radius: 20px;
+}
+.product {
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+.product-name {
+width: 200px;
+height: 10px;
+font-family: Arial;
+font-style: normal;
+font-weight: bold;
+font-size: 20px;
+line-height: 50px;
+color: #000000;
+}
+.detail {
+width: 200px;
+height: 20px;
+font-family: Arial;
+font-style: normal;
+font-weight: normal;
+font-size: 18px;
+line-height: 46px;
+text-decoration-line: underline;
 
-.div-2 {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding: 63px 12px 59px 56px;
-  height: 100%;
-  width: 100%;
-  border: 1px solid;
-  background: #ffffff;
-  font-size: 40px;
-  font-weight: 700;
-  line-height: 46px;
-  color: #000000;
+color: #000000;
 }
-.div-3 {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: end;
-  margin: 0px 0px 0px 0px;
+.btn-contact {
+width: 120px;
+height: 30px;
+background: #4ADCB0;
+border: 2px solid #000000;
+box-sizing: border-box;
+border-radius: 10px;
+font-weight: 700;
+font-family: Arial;
+font-size: 16px;
 }
-.img-1 {
-  height: 409px;
-  width: 406px;
-  margin: 0px 0px 0px 0px;
-}
-.span-1 {
-  margin: 0px 0px 0px 0px;
-}
-.span-2 {
-  font-weight: 400;
-  text-decoration: underline;
-  margin: 0px 0px 0px 0px;
-}
-.div-4 {
-  border-radius: 90px;
-  padding: 4px 35px 14px 72px;
-  margin: 34px 0px 0px 0px;
-  border: 5px solid #000000;
-  background: #4adcb0;
+.fix {
+  width: 200px;
+  height: auto;
+  padding: 20px 20px 20px 20px;
+  img {
+    width: 150px;
+    max-height: 130px;
+  }
 }
