--- a/src/features/product/component/dasboard/dasboard.scss
+++ b/src/features/product/component/dasboard/dasboard.scss
@@ -55,7 +55,7 @@ input[type=text] {
 
  }
  .btncategory {
-   text-align: center;
+  text-align: center;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -73,6 +73,15 @@ input[type=text] {
   display: flex;
   flex-direction: column;
 }
+.btnkiosk:hover{
+  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.2);
+}
+.btnmaythungan:hover{
+  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.2);
+}
+.btnphanmem:hover{
+  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.2);
+}
 .p-items {
 font-family: Arial;
 font-style: normal;
@@ -80,13 +89,18 @@ font-weight: bold;
 text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .product-card {
-width: 200px;
-height: 300px;
+// width: 250px;
+// height: 350px;
 left: 50px;
 top: 50px;
 background: #FFFFFF;
 box-shadow: 10px 10px 33px rgba(0, 0, 0, 0.43), 0px 4px 4px rgba(0, 0, 0, 0.25);
 border-radius: 20px;
+box-sizing: border-box;
+line-break: auto;
+}
+.product-card:hover{
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 .product {
   text-align: center;
@@ -95,8 +109,8 @@ border-radius: 20px;
   justify-content: space-evenly;
 }
 .product-name {
-width: 200px;
-height: 10px;
+width: 250px;
+height: 18px;
 font-family: Arial;
 font-style: normal;
 font-weight: bold;
@@ -105,8 +119,8 @@ line-height: 50px;
 color: #000000;
 }
 .detail {
-width: 200px;
-height: 20px;
+width: 250px;
+height: 35px;
 font-family: Arial;
 font-style: normal;
 font-weight: normal;
@@ -117,22 +131,25 @@ text-decoration-line: underline;
 color: #000000;
 }
 .btn-contact {
-width: 120px;
-height: 30px;
+width: 150px;
+height: 35px;
 background: #4ADCB0;
 border: 2px solid #000000;
 box-sizing: border-box;
-border-radius: 10px;
+border-radius: 25px;
 font-weight: 700;
 font-family: Arial;
-font-size: 16px;
+font-size: 17px;
 }
-.fix {
-  width: 200px;
-  height: auto;
-  padding: 20px 20px 20px 20px;
-  img {
-    width: 150px;
-    max-height: 130px;
-  }
+.img {
+  width: 100%;
+  padding: 20px;
 }
+.container {
+  padding: 50px 0px;
+}
+.btn-contact:hover {
+  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.2);
+}
+
+
