--- a/src/features/product/component/dasboard/dasboard.scss
+++ b/src/features/product/component/dasboard/dasboard.scss
@@ -89,19 +89,12 @@ font-weight: bold;
 text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .product-card {
-// width: 250px;
-// height: 350px;
-left: 50px;
-top: 50px;
-background: #FFFFFF;
-box-shadow: 10px 10px 33px rgba(0, 0, 0, 0.43), 0px 4px 4px rgba(0, 0, 0, 0.25);
-border-radius: 20px;
-box-sizing: border-box;
-line-break: auto;
+  @apply grid justify-items-center bg-gray-100 drop-shadow-2xl rounded-xl hover:bg-gray-300 pt-4;
+  .img-card{
+    @apply w-96 h-auto
+  }
 }
-.product-card:hover{
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
+
 .product {
   text-align: center;
   display: flex;
