--- a/src/features/product/component/banner/banner.scss
+++ b/src/features/product/component/banner/banner.scss
@@ -1,13 +1,5 @@
 .banner{
-    background-position: center;
-     width: 100%;
-     height: 400px;
-     left: 4px;
-     bottom: 100px;
-     
-     background-image: url(/asset/banner.jpg);
-     background-size: cover;
-     background-repeat: no-repeat;
+    @apply w-full
   
  }
 
