--- a/src/features/Home/body.scss
+++ b/src/features/Home/body.scss
@@ -5,19 +5,12 @@ h2.label2 {display: block; margin-left: auto; margin-right: auto; font-variant: 
     text-align:center;
     width:auto;
     height: 150px;
-    line-height:10px;
-    text-align:center;
     }
-    * {
-        box-sizing:border-box
-      }
-      h2 {
-        text-align: center;
-      }
+
       /* Slideshow container */
       .slider{
         width:400px;
-        margin:20px auto;
+        margin: auto;
         text-align: center;
         padding:20px;
         color:white;
@@ -33,6 +26,4 @@ h2.label2 {display: block; margin-left: auto; margin-right: auto; font-variant: 
         
         margin-top: 20px;       
       }
-      .top{
-        margin-top: 50px;
-      }
+
