--- a/src/features/Home/body.scss
+++ b/src/features/Home/body.scss
@@ -13,7 +13,7 @@ h2.label2 {display: block; margin-left: auto; margin-right: auto; font-variant: 
         margin: auto;
         text-align: center;
         padding:20px;
-        color:white;
+        color:#ffffff;
         .parent-slide{padding:15px;}
         img{display: block;margin:auto;}
       }
