--- a/src/features/product/component/dasboard/dasboard.scss
+++ b/src/features/product/component/dasboard/dasboard.scss
@@ -118,7 +118,7 @@ color: #000000;
 width: 150px;
 height: 35px;
 background: #4ADCB0;
-border: 2px solid #000000;
+border: 2px solid black;
 box-sizing: border-box;
 border-radius: 25px;
 font-weight: 700;
